<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">推喽</string>
    <string name="action_settings">设置</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="register_fail_message">注册失败！</string>
    <string name="register_succeed_message">注册成功，欢迎使用。</string>
    <string name="null_value">不要输入空值</string>
    <string name="password_differ">两次输入的密码不一致</string>
    <string name="user_already_exist">邮箱已注册</string>
    <string name="email_format">邮箱格式不正确</string>
    <string name="user_no_exist">用户名不存在</string>
    <string name="password_error">密码错误</string>
    <string name="back">返回</string>
    
    <string name="exit_application">再按一次退出程序</string>
    <string name="network_error">请检查网络连接</string>
    
    <string name="message">消息</string>
   	<string name="pull_to_refresh">下拉可以刷新</string>
	<string name="release_to_refresh">释放立即刷新</string>
	<string name="refreshing">正在刷新…</string>
	<string name="not_updated_yet">暂未更新过</string>
	<string name="updated_at">上次更新于%1$s前</string>
	<string name="updated_just_now">刚刚更新</string>
	<string name="time_error">时间有问题</string>
    
    <string name="add_group">加入小组</string>
    <string name="invitation_code">请输入邀请码</string>
    <string name="confirm">确认</string>
    <string name="group_exist">小组名已存在</string>
    <string name="invite_succeed">已成功加入小组</string>
    <string name="code_no_exist">邀请码不存在</string>
    <string name="your_group">这是自己创建的小组邀请码</string>
    <string name="already_add_group">已经加入该小组</string>
    
    <string name="create_group">创建小组</string>
    <string name="group_name">组名</string>
    <string name="remark">备注</string>
    <string name="create">创建</string>
    <string name="my_invitation_code">邀请码</string>
    <string name="share">分享</string>
    
    <string name="my_group">我的小组</string>
    <string name="my_create">我的创建</string>
    <string name="my_join">我的参与</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="send_message">发送消息</string>
    <string name="send_message_succeed">发送消息成功</string>
    <string name="confirm_delete">确认删除</string>
    <string name="exit_group">退出小组</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    
    <string name="setting">设置</string>
    <string name="exit">退出账户</string>

</resources>
