<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.init.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:hint="@string/email"
        android:singleLine="true"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/email"
        android:hint="@string/password"
        android:singleLine="true"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:hint="@string/confirm_password"
        android:singleLine="true"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_below="@+id/confirmPassword"
        android:hint="@string/nickname"
        android:singleLine="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nickname"
        android:layout_below="@+id/nickname"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/registerButton"
        android:layout_alignBottom="@+id/registerButton"
        android:layout_alignRight="@+id/nickname"
        android:layout_marginRight="22dp"
        android:text="@string/back" />

</RelativeLayout>