<?xml version="1.0" encoding="utf-8"?>   
<ScrollView    
    xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"  
    android:layout_width="fill_parent"    
    android:layout_height="fill_parent"    
    android:scrollbars="vertical"    
    android:fadingEdge="vertical">  

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.init.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:singleLine="true"
        android:hint="@string/group_name"
        android:ems="10" />

    <EditText
        android:id="@+id/remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/groupName"
        android:layout_below="@+id/groupName"
        android:layout_marginTop="32dp"
        android:hint="@string/remark"
        android:ems="10" >
    </EditText>

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/create" />
 
</RelativeLayout>

</ScrollView>  