<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.init.MainActivity$PlaceholderFragment" >
    
    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/hint"
        android:ems="10"
        android:inputType="textEmailAddress" >
        
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignBottom="@+id/password"
        android:layout_toLeftOf="@+id/email"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_alignLeft="@+id/email"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="162dp"
            android:layout_toRightOf="@+id/textView2"
            android:text="@string/login" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/loginButton"
        android:text="@string/forget_password" />
</RelativeLayout>